Main title functionality changed

--- a/app/index.html
+++ b/app/index.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Edgar Nava personal portfoliio.</title>
-  </head>
-  <body>
-    <div class="static-element static-element__letter-e">
-      <h1>e</h1>
+    <title>Edgar Nava personal portfolio.</title>
+</head>
+
+<body>
+    <div class="page-header">
+        <h1 class="page-header__text"></h1>
     </div>
-    <div class="static-element static-element__letter-n">
-      <h1>n</h1>
+    <div class="static-letters static-letters__e">
+        <h1>e</h1>
     </div>
-    <header class="site-home">
-      <div class="site-home__big-title">
-        <h1>edgar nava</h1>
-      </div>
-      <div class="banner-animated">
-        <h2>| software development</h2>
-      </div>
-    </header>
-    <div class="page-section site-about">
-      <div class="page-header">
-        <h1>about</h1>
-      </div>
-      <img src="#" alt="Edgar Nava">
-      <p>Software development enthusiat with great passion for coding!
-More than 6 years of experience working in the construction of software tools in organizations.
-      </p>
+    <div class="static-letters static-letters__n">
+        <h1>n</h1>
     </div>
-    <div class="page-section site-experience">
-      <div class="page-header">
-        <h1>experience</h1>
-      </div>
-    </div>
-    <div class="page-section site-education">
-      <div class="page-header">
-        <h1>education</h1>
-      </div>
-    </div>
-    <div class="page-section site-skills">
-      <div class="page-header">
-        <h1>skills</h1>
-      </div>
-    </div>
-    <footer class="site-footer">
-      <div class="wrapper">
-            <p><span class="site-footer__text">Copyright &copy; 2020 Edgar Nava. All rights reserved.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
+    <header class="site-home" matching-link="#home-link">
+        <div class="site-home__big-title">
+            <h1>edgar nava</h1>
         </div>
-    </footer>
-  </body>
+        <div class="site-home__subtitle banner-animated">
+            <h2>| software development</h2>
+        </div>
+    </header>
+    <section class="site-about" matching-link="#bout-link">
+        <div class="site-about__pic">
+
+        </div>
+        <div class="site-about__text">
+            <h3 class="site-about__text__intro">Software development enthusiat with great passion for coding!</h3>
+            <p class="site-about__text__brief">More than 6 years of experience working in the construction of software tools in organizations.</p>
+        </div>
+    </section>
+    <section class="site-experience" matching-link="#experience-link">
+
+    </section>
+    <dsectioniv class="site-education" matching-link="#education-link">
+
+        </section>
+        <section class="site-skills" matching-link="#skills-link">
+
+        </section>
+        <section class="site-projects" matching-link="#projects-link">
+
+        </section>
+        <section class="site-contact" matching-link="#contact-link">
+
+        </section>
+        <footer class="site-footer">
+            <div class="wrapper">
+                <p><span class="site-footer__text">Copyright &copy; 2020 Edgar Nava. All rights reserved.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
+            </div>
+        </footer>
+</body>
+
 </html>
