Created experience structure

--- a/app/index.html
+++ b/app/index.html
@@ -20,11 +20,11 @@
         <div class="site-home__big-title">
             <h1>edgar nava</h1>
         </div>
-        <div class="site-home__subtitle banner-animated">
+        <div class="site-home__subtitle">
             <h2>| software development</h2>
         </div>
     </header>
-    <section class="site-about" matching-link="#bout-link">
+    <section class="site-about" matching-link="#about-link">
         <div class="site-about__pic">
 
         </div>
@@ -34,7 +34,49 @@
         </div>
     </section>
     <section class="site-experience" matching-link="#experience-link">
-
+        <div class="site-experience__timeline">
+            <div class="site-experience__container site-experience--left">
+                <div class="site-experience__content baz">
+                    <h2>January 2005 to July 2006</h2>
+                    <h2>Software Developer </h2>
+                    <p>Conceived, planned, developed and delivered the bank’s Customer Relationship Management (CRM)requested by the Sales Division. Developed a solution to integrate big amounts of transactional information from different sources and technologies
+                        (SQL Server, AS400 and Oracle) into one single tool developed in Java back-end and PHP front-end. Extensive use of XML queries to handle large amounts of data. Analyzed, defined, negotiated and purchased the required hardware for
+                        the CRM software to be deployed in more than 110 branches of the bank.</p>
+                </div>
+            </div>
+            <div class="site-experience__container site-experience--right">
+                <div class="site-experience__content invex">
+                    <h2>August 2006 to December 2007</h2>
+                    <h2>Risk Models Analyst </h2>
+                    <p>Developed a real time reports system in Jasper Reports that replaced the previous one build in MS Excell. Developed a solution to integrate big amounts of transactional information from different sources and technologies (SQL Server,
+                        txt, and Oracle) into one single tool.</p>
+                </div>
+            </div>
+            <div class="site-experience__container site-experience--left">
+                <div class="site-experience__content cco">
+                    <h2>January 2010 to July 2016</h2>
+                    <h2>Grains Trader </h2>
+                    <p>Managed the export and domestic sales of White Corn and Durum Wheat. Increased customer base and retention of current clients. Developed price creation and detailed costing models. Worked side to side with the commercial team on the
+                        planning and execution of the logistics. </p>
+                </div>
+            </div>
+            <div class="site-experience__container site-experience--right">
+                <div class="site-experience__content aor">
+                    <h2>August 2016 to September 2018</h2>
+                    <h2>Computer Systems Analyst </h2>
+                    <p>Developed a Customer Relationship Management (CRM) in-house solution to help traders to manage the sale process from planning to closing. This software was developed in HTML-CSS(SASS)-JavaScript in the front end and NodeJS-MySQL int
+                        the back end. We also developed a price prediction module in Python. The project included tools to manage the interaction with leads and current customers that helped traders to give the most appropriate next steps in the interaction
+                        towards the close of a sale. </p>
+                </div>
+            </div>
+            <div class="site-experience__container site-experience--left">
+                <div class="site-experience__content ace">
+                    <h2>October 2018 to April 2020</h2>
+                    <h2>Full-Stack Web Developer </h2>
+                    <p>Contributed on the development of an inventory management application MongoDB-Express-React-Node (MERN) based. Leaded the implementation of SAP Business One ERP. Developed a HR recruitment tool in C# WPF and SQLServer.</p>
+                </div>
+            </div>
+        </div>
     </section>
     <dsectioniv class="site-education" matching-link="#education-link">
 
