Skills section added

--- a/app/index.html
+++ b/app/index.html
@@ -141,24 +141,43 @@
         </div>
     </section>
     <section class="site-skills" matching-link="#skills-link">
-        <p>HTML</p>
-        <div class="container">
-            <div class="skills html">90%</div>
-        </div>
-
-        <p>CSS</p>
-        <div class="container">
-            <div class="skills css">80%</div>
-        </div>
-
-        <p>JavaScript</p>
-        <div class="container">
-            <div class="skills js">65%</div>
-        </div>
-
-        <p>PHP</p>
-        <div class="container">
-            <div class="skills php">60%</div>
+        <div class='stat-container'>
+            <!-- HTML -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>HTML</p>
+                <p class='stat-unit'></p>
+            </div>
+            <progress max="100" value="98" class="html5"> </progress>
+            <!-- CSS -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>CSS</p>
+            </div>
+            <progress max="100" value="93" class="html5"> </progress>
+            <!-- JavaScript -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>JavaScript</p>
+            </div>
+            <progress max="100" value="90" class="html5"> </progress>
+            <!-- Python -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>Python</p>
+            </div>
+            <progress max="100" value="85" class="html5"> </progress>
+            <!-- C# -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>C#</p>
+            </div>
+            <progress max="100" value="70" class="html5"> </progress>
+            <!-- Nodejs -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>Node.js</p>
+            </div>
+            <progress max="100" value="90" class="html5"> </progress>
+            <!-- MongoDB -->
+            <div class='label-wrapper'>
+                <p class='stat-name'>MongoDB</p>
+            </div>
+            <progress max="100" value="80" class="html5"> </progress>
         </div>
     </section>
     <section class="site-projects" matching-link="#projects-link">
