--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     </div>
     <header class="site-home" matching-link="#home-link">
         <div class="site-home__big-title">
-            <h1>edgar nava</h1>
+            <h1>edgar nava ramirez</h1>
         </div>
         <div class="site-home__subtitle">
             <h2>| software development</h2>
