Skills background added

--- a/app/index.html
+++ b/app/index.html
@@ -211,9 +211,11 @@
     </section>
     <section class="site-contact" id="contact" matching-link="#contact-link">
         <div class="site-contact__container">
-            <img class="site-contact__drawing" src="./assets/images/enr-draw1.jpg" alt="Edgar Nava's drawing.">
+            <div class="site-contact__drawing">
+                <img src="./assets/images/enr-draw1.jpg" alt="Edgar Nava's drawing.">
+            </div>
             <h1 class="site-contact__title">Let's get in touch!</h1>
-            <h4 class="site-contact__email">edgarnr@outlook.com</h4>
+            <h3 class="site-contact__email">edgarnr@outlook.com</h3>
             <!--<form class="site-contact__form" action="mailto:edgarnr@outlook.com" method="POST" enctype="text/plain">
                 <label for="">Your name:</label>
                 <input type="text" name="yourName"><br>
