--- a/app/index.html
+++ b/app/index.html
@@ -217,9 +217,15 @@
             </div>
             <div class="site-experience__container site-experience--left">
                 <div class="site-experience__content ace">
-                    <h3>October 2018 to April 2020</h3>
-                    <h2>Full-Stack Web Developer </h2>
+                    <h3>October 2018 to December 2020</h3>
+                    <h2>FullStack Web Developer </h2>
                     <!--<p>Contributed on the development of an inventory management application MongoDB-Express-React-Node (MERN) based. Leaded the implementation of SAP Business One ERP. Developed a HR recruitment tool in C# WPF and SQLServer.</p>-->
+                </div>
+            </div>
+            <div class="site-experience__container site-experience--right">
+                <div class="site-experience__content vwfs">
+                    <h3>January 2021 to present</h3>
+                    <h2>Senior FullStack Developer</h2>
                 </div>
             </div>
         </div>
@@ -341,7 +347,7 @@
                 <img src="./assets/images/enr-draw1.jpg" alt="Edgar Nava's drawing.">
             </div>
             <h1 class="site-contact__title">Let's get in touch!</h1>
-            <h3 class="site-contact__element">edgarnr@outlook.com</h3>
+            <h3 class="site-contact__element">edgarnava2680@gmail.com</h3>
             <div class="share__list">
                 <a class="share__item share__item--linkedin" target="_blank" href="https://www.linkedin.com/in/nava-edgar-softdev"><i class="fab fa-linkedin"></i></a>
                 <a class="share__item share__item--github" target="_blank" href="https://github.com/edgarnava80"><i class="fab fa-github-square"></i></a>
